# decires

./: .env.dist  .env.prd  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
apps/core/: admin.py  core_constants.py
apps/core/admin/: __init__.py  auth_user.py  zone.py
apps/core/api/: user_attachment.py
apps/core/migrations/: 0001_initial.py  0002_alter_city_options_alter_country_options_and_more.py  0002_authuser_membership_plan.py  0002_city_country_remove_authuser_office_location_and_more.py  0003_remove_authuser_office_location_tags_and_more.py  0004_alter_authuser_office_locations.py
apps/core/models/: __init__.py  auth_user.py  city.py  country.py  user_manager.py  zone.py
apps/core/schema/: api.py
apps/core/urls/: __init__.py  professional.py
apps/core/views/: __init__.py  commons.py  interfaces.py  mask_resource.py
apps/psychology/: psychology_constants.py
apps/psychology/adapters/: attention_modes.py  audience.py  carreer.py  languages.py  office_location.py  specialization.py  specializations.py  (+6 more)
config/: asgi.py  enviroment_vars.py  urls.py
config/settings/: base.py
staticfiles/base/: commons.js  home.js  professional_retrieve.js  professional_search.js  user_register.js
templates/: home.html
templates/base/: base.html  clean_navbar.html  content.html  footer.html  navbar.html
templates/core/: professional_retrieve.html  professional_search.html  user_register.html
utils/: adapter.py  decorators.py  enums.py  models.py  s3_client.py  send_email.py  upload_files.py
(+83 files in other folders)
